// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon/Actions Action and method 1`] = `
<storybook-wrapper
  changeDetectorRef={[Function ViewRef_]}
  onClick={[Function Function]}
  storyComponentElementRef={[Function ButtonComponent]}
  storyComponentViewContainerRef={[Function ViewContainerRef_]}
  storyProps$={[Function Observable]}
  storyPropsSubscription={[Function Subscriber]}
  text={[Function String]}
>
  <storybook-button-component
    _nghost-a-c5=""
    ng-reflect-text="Action and Method"
  >
    <button
      _ngcontent-a-c5=""
    >
      Action and Method
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Addon/Actions Action only 1`] = `
<storybook-wrapper
  changeDetectorRef={[Function ViewRef_]}
  onClick={[Function Function]}
  storyComponentElementRef={[Function ButtonComponent]}
  storyComponentViewContainerRef={[Function ViewContainerRef_]}
  storyProps$={[Function Observable]}
  storyPropsSubscription={[Function Subscriber]}
  text={[Function String]}
>
  <storybook-button-component
    _nghost-a-c4=""
    ng-reflect-text="Action only"
  >
    <button
      _ngcontent-a-c4=""
    >
      Action only
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
